#+title: Change log for Emacs-enhanced
#+author: James Dyer
#+email: captainflasmr@gmail.com
#+language: en
#+options: ':t toc:nil author:nil email:nil num:nil title:nil
#+todo: TODO DOING | DONE
#+startup: showall

This document contains the release notes for Emacs-enhanced

* Versions

** <2025-01-05>

icomplete-in-buffer setup and completion functions to try and replace corfu/company

- Added `(setq icomplete-in-buffer t)` to improve in-buffer completion behavior.
- Documented custom functions =my/simple-completion-at-point= utilizing =completion-in-region= and =completing-read=
- Introduced `C-c TAB` keybinding for invoking custom completion.
- Disabled `completion-auto-help` globally except in minibuffer.
- Customized `TAB` key binding for minibuffer-local-completion-map.
- Suppressed completion buffer help header via `completion-show-help`.
- Updated documentation to reflect these adjustments and their rationale.

** <2025-01-01>

Refactor popup handling and improve buffer filtering logic

- Updated =my/popper-show-hide-popup= to improve popup buffer filtering with =popup-patterns=,
  allowing more flexible matching of buffers against patterns.
- Adjusted logic to remove redundant comments and optimize control flow:
  - Clearly separated cases for hiding the current popup and displaying the next valid popup.
  - Refactored buffer filtering using =seq-filter= to enhance clarity and reduce redundancy.
- Removed extraneous comments and dead code for improved readability.
- No functional changes to existing behavior; this is a refactoring for code clarity and maintainability.

** <2024-12-29>

Added initial attempt at generating an RSS xml feed based on my org posts.

** <2024-12-29>

Add "Issues" section and link TODOs to project features in README

- Added a new "Issues" section with TODOs, each linked to related project features.
- Supplemented the section with Emacs Lisp code to auto-generate issue tables.

** <2024-12-28>
