@@ -21,6 +21,16 @@ Used in concert with https://github.com/captainflasmr/Emacs-core
 
 * Whats New
 
+** <2025-01-07>
+
+Add eglot replacement using custom etags functions and keybindings
+
+- Added `my/etags-load`: Locate and load the nearest TAGS file.
+- Added `my/etags-update`: Generate etags using an external script if available.
+- Added `my/generate-etags`: Recursively create etags for C, C++, C#, and Ada files.
+- Introduced `predicate-exclusion-p` for directory exclusion logic.
+- Bound `my/etags-load` to `C-x p l` and `my/etags-update` to `C-x p u`.
+
 ** <2025-01-05>
 
 icomplete-in-buffer setup and completion functions to try and replace corfu/company
@@ -58,21 +68,21 @@ Here is a kanban of the features that will be (hopefully) converted to core/enha
 #+end_src
 
 #+RESULTS:
-| TODO                                 | DOING                                          | DONE                        |
-|--------------------------------------+------------------------------------------------+-----------------------------|
-| push buffer to popup buffer and back | consult                                        | minibuffer completion       |
-| Apply css                            | embark                                         | ace-window                  |
-| capf-autosuggest                     | popper                                         | recentf-open                |
-|                                      | pop in and out on initial not working too well | rainbow-mode                |
-|                                      | pandoc md to org conversion                    | visual-fill-column-mode     |
-|                                      | completion - corfu / company                   | find-name-dired             |
-|                                      | Test completion through programming modes      | magit                       |
-|                                      | org-kanban                                     | tempel                      |
-|                                      | ox-hugo                                        | image-dired                 |
-|                                      | Generate RSS xml                               | selected-window-accent-mode |
-|                                      |                                                | deadgrep                    |
-|                                      |                                                | jinx / powerthesaurus       |
-|                                      |                                                | kurecolor                   |
+| TODO                                 | DOING                                     | DONE                        |
+|--------------------------------------+-------------------------------------------+-----------------------------|
+| push buffer to popup buffer and back | consult                                   | minibuffer completion       |
+| Apply css                            | embark                                    | ace-window                  |
+| capf-autosuggest                     | popper                                    | recentf-open                |
+|                                      | pandoc md to org conversion               | rainbow-mode                |
+|                                      | completion - corfu / company              | visual-fill-column-mode     |
+|                                      | Test completion through programming modes | find-name-dired             |
+|                                      | org-kanban                                | magit                       |
+|                                      | ox-hugo                                   | tempel                      |
+|                                      | Generate RSS xml                          | image-dired                 |
+|                                      | eglot                                     | selected-window-accent-mode |
+|                                      |                                           | deadgrep                    |
+|                                      |                                           | jinx / powerthesaurus       |
+|                                      |                                           | kurecolor                   |
 
 * Issues
 
@@ -81,13 +91,12 @@ Here is a kanban of the features that will be (hopefully) converted to core/enha
 #+end_src
 
 #+RESULTS:
-| TODO  | Title                                          | Parent Title                 |
-|-------+------------------------------------------------+------------------------------|
-| TODO  | Apply css                                      | ox-hugo                      |
-| DOING | Generate RSS xml                               | ox-hugo                      |
-| DOING | Test completion through programming modes      | completion - corfu / company |
-| DOING | pop in and out on initial not working too well | popper                       |
-| TODO  | push buffer to popup buffer and back           | popper                       |
+| TODO  | Title                                     | Parent Title                 |
+|-------+-------------------------------------------+------------------------------|
+| TODO  | Apply css                                 | ox-hugo                      |
+| DOING | Generate RSS xml                          | ox-hugo                      |
+| DOING | Test completion through programming modes | completion - corfu / company |
+| TODO  | push buffer to popup buffer and back      | popper                       |
 
 * Roadmap                                                           :roadmap:
 
@@ -784,8 +793,6 @@ Mainly used for popping and popping out shells, testing the following implementa
 
 *** TODO push buffer to popup buffer and back                      :issues:
 
-*** DOING pop in and out on initial not working too well           :issues:
-
 ** DOING pandoc md to org conversion
 
 Replacing the external tool Pandoc for converting Markdown (md) to Org format is especially useful when copying and pasting from AI chats.
@@ -1194,16 +1201,116 @@ Starting with the following and adapting, it is a decent starting point:
 
 *** TODO Apply css                                                 :issues:
 
+** DOING eglot
+
+Note: a more modern version would have eglot built-in (29.1)
+
+In the mean time lets leverage etags as much as possible, initially a bash script to generate a TAGS file for as many programming language extensions possible:
+
+#+begin_src bash :tangle no
+#!/bin/bash
+TAGF=$PWD/TAGS
+rm -f "$TAGF"
+for src in `find $PWD \( -path \*/.cache -o \
+               -path \*/.gnupg -o \
+               -path \*/.local -o \
+               -path \*/.mozilla -o \
+               -path \*/.thunderbird -o \
+               -path \*/.wine -o \
+               -path \*/Games -o \
+               -path \*/cache -o \
+               -path \*/chromium -o \
+               -path \*/elpa -o \
+               -path \*/nas -o \
+               -path \*/syncthing -o \
+               -path \*/Image-Line -o \
+               -path \*/.cargo -o \
+               -path \*/.git -o \
+               -path \*/.svn -o \
+               -path \*/.themes -o \
+               -path \*/themes -o \
+               -path \*/objs -o \
+               -path \*/ArtRage \) \
+               -prune -o -type f -print`;
+do
+    case "${src}" in
+        ,*.ad[absm]|*.[CFHMSacfhlmpsty]|*.def|*.in[cs]|*.s[as]|*.src|*.cc|\
+            ,*.hh|*.[chy]++|*.[ch]pp|*.[chy]xx|*.pdb|*.[ch]s|*.[Cc][Oo][Bb]|\
+            ,*.[eh]rl|*.f90|*.for|*.java|*.[cem]l|*.clisp|*.lisp|*.[Ll][Ss][Pp]|\
+            [Mm]akefile*|*.pas|*.[Pp][LlMm]|*.psw|*.lm|*.pc|*.prolog|*.oak|\
+            ,*.p[sy]|*.sch|*.scheme|*.[Ss][Cc][Mm]|*.[Ss][Mm]|*.bib|*.cl[os]|\
+            ,*.ltx|*.sty|*.TeX|*.tex|*.texi|*.texinfo|*.txi|*.x[bp]m|*.yy|\
+            ,*.[Ss][Qq][Ll])
+            etags --append "${src}" -o "$TAGF";
+            echo ${src}
+            ;;
+        ,*)
+            FTYPE=`file ${src}`;
+            case "${FTYPE}" in
+                ,*script*text*)
+                    etags --append "${src}" -o "$TAGF";
+                    echo ${src}
+                    ;;
+                ,*text*)
+                    if head -n1 "${src}" | grep '^#!' >/dev/null 2>&1;
+                    then
+                        etags --append "${src}" -o "$TAGF";
+                        echo ${src}
+                    fi;
+                    ;;
+            esac;
+            ;;
+    esac;
+done
+echo
+echo "Finished!"
+echo
+#+end_src
+
+or maybe the more elisp based approach:
+
+#+begin_src elisp
+(defun my/etags-load ()
+  "Load TAGS file from the first it can find up the directory stack."
+  (interactive)
+  (let ((my-tags-file (locate-dominating-file default-directory "TAGS")))
+    (when my-tags-file
+      (message "Loading tags file: %s" my-tags-file)
+      (visit-tags-table my-tags-file))))
+;;
+(when (executable-find "my-generate-etags.sh")
+  (defun my/etags-update ()
+    "Call external bash script to generate new etags for all languages it can find."
+    (interactive)
+    (async-shell-command "my-generate-etags.sh" "*etags*")))
+;;
+(defun predicate-exclusion-p (dir)
+  "exclusion of directories"
+  (not
+   (or
+    (string-match "/home/jdyer/examples/CPPrograms/nil" dir)
+    )))
+;;
+(defun my/generate-etags ()
+  "Generate TAGS file for various source files in `default-directory` and its subdirectories."
+  (interactive)
+  (message "Getting file list...")
+  (let ((all-files
+         (append
+          (directory-files-recursively default-directory "\\(?:\\.cpp$\\|\\.c$\\|\\.h$\\)" nil 'predicate-exclusion-p)
+          (directory-files-recursively default-directory "\\(?:\\.cs$\\|\\.cs$\\)" nil 'predicate-exclusion-p)
+          (directory-files-recursively default-directory "\\(?:\\.ads$\\|\\.adb$\\)" nil 'predicate-exclusion-p)))
+        (tags-file-path (expand-file-name (concat default-directory "TAGS"))))
+    (unless (file-directory-p default-directory)
+      (error "Default directory does not exist: %s" default-directory))
+    ;; Generate TAGS file
+    (dolist (file all-files)
+      (message file)
+      (shell-command (format "etags --append \%s -o %s" file tags-file-path)))))
+(global-set-key (kbd "C-x p l") 'my/etags-load)
+(global-set-key (kbd "C-x p u") 'my/etags-update)
+#+end_src
+
 ** TODO capf-autosuggest
 
-Some elisp for some simple predictive inline completion, maybe take a look at how capf-autosuggest does it.
-
-* TODO Features that won't be converted to core
-
-** TODO plantuml
-
-** TODO eglot
-
-Although I could always build the latest Emacs to overcome this.
-
-Not too much I can do about this, however I could apply some =etag= replacement functionality, but it really isn't the same.
+Some elisp for some simple predictive inline completion, maybe take a look at how capf-autosuggest does it or the new completion preview in Emacs 30.
